# TEF-data

./: .gitignore  README.md  TEF_crawler_dev.ipynb  create_pgsql_table.sql  pyproject.toml
airflow_dag/: financialdata_crawler.py  pg_2_gcs.py
dbt_task/: dbt_project.yml
dbt_task/models/TFE_transform/: pop_investors_mxf.sql  schema.yml  small_insitutional.sql
financialdata/crawler/: futContractsDate_MXF.py  futContractsDate_TXF.py  futDailyMarketRoprot_MTX.py  largeTraderFutQry_TX.py
financialdata/pg_extract/: pg_extract.py
