[tool.poetry]
name = "tfe-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
numpy = "1.24.1"
pandas = "1.5.3"
requests = "2.28.2"
pydantic = "1.10.4"
loguru = "0.6.0"
beautifulsoup4 = "4.11.1"
psycopg2 = "2.9.5"
configparser = "5.3.0"
SQLAlchemy = "2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
